# face_recognition

./: README.md  onnx.py
face_recognition/: CMakeLists.txt  README.md
face_recognition/src/: main.cpp  mobilefacenet.cpp  mobilefacenet.h  mtcnn.cpp  personid.cpp  personid.h
ncnn/: CMakeLists.txt
ncnn/examples/: CMakeLists.txt  squeezenet.cpp
ncnn/src/layer/vulkan/shader/: packing_pack1to8.comp  packing_pack8to1.comp
ncnn/tools/quantize/: ncnn2table.cpp
